force-app/main/default/objects/Rating__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movie</label>
    <referenceTo>Episode__c</referenceTo>
    <relationshipLabel>Ratings</relationshipLabel>
    <relationshipName>Ratings</relationshipName>
    <type>Lookup</type>
</CustomField>