force-app/main/default/objects/Rating__c/validationRules/Rating_must_have_movie_or_TV_Series.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating_must_have_movie_or_TV_Series</fullName>
    <active>true</active>
    <errorConditionFormula>OR(   AND(ISBLANK(TV_Series__c),ISBLANK(Movie__c)) , AND(NOT (ISBLANK(TV_Series__c)),NOT(ISBLANK(Movie__c))))</errorConditionFormula>
    <errorMessage>Rating must have populated TV series OR Movie</errorMessage>
</ValidationRule>